tests/NormalTests/paczka1/small_fuzzy/75115409.err
Error in line 3: pKjj A968 60,3
Error in line 10: i4pFDWk A32 60,3
